Qt 6: Fixed tile rendering when OpenGL is enabled

Work around an issue introduced in Qt 6.4.1 (QTBUG-111416) by not using
QPainter::drawPixmapFragments in OpenGL mode. This makes rendering tiles
a bit less efficient, but at least it works.

Closes #3578